bk_ida/gccida/c0/visit_expression
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:708:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode op0_mode; // [rsp+2Ch] [rbp-114h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:716:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode0; // [rsp+8Ch] [rbp-B4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:718:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+9Ch] [rbp-A4h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:748:1: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
edge_info_0[index] = flow_edges; 
^~~~~~~~~~~
edge_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:756:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( rtx)insn[2]; 
           ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:767:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
src = ( rtx)v4[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:816:1: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
edge_info_0[index_1] = flow_edges; 
^~~~~~~~~~~
edge_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:835:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)src->fld[0].rtwint, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:835:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)src->fld[0].rtwint, 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:849:1: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
edge_info_0[index_2] = flow_edges; 
^~~~~~~~~~~
edge_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:864:1: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
edge_info_0[index_0] = flow_edges; 
^~~~~~~~~~~
edge_info
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:889:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)src, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:889:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)src, 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:890:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)src), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:890:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)src), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:897:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
src1_0 = ( rtx)src[1]; 
               ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:908:3: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
( rtx_code)( unsigned __int16)*( _DWORD *)src, 
  ^~~~~~~~
  rtx_cost
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:908:14: error: expected expression
( rtx_code)( unsigned __int16)*( _DWORD *)src, 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/ssa-ccp.c:909:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)src), 
  ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/visit_expression/src/obj/ssa-ccp.o] Error 1
